@@ -5,22 +5,25 @@
  */
 package net.sourceforge.pmd.rules;
 
+import java.util.List;
+
 import net.sourceforge.pmd.AbstractRule;
 import net.sourceforge.pmd.ast.ASTConstructorDeclaration;
+import net.sourceforge.pmd.ast.ASTExpression;
 import net.sourceforge.pmd.ast.ASTFieldDeclaration;
 import net.sourceforge.pmd.ast.ASTInitializer;
 import net.sourceforge.pmd.ast.ASTMethodDeclaration;
+import net.sourceforge.pmd.ast.ASTSynchronizedStatement;
 import net.sourceforge.pmd.ast.ASTVariableDeclaratorId;
+import net.sourceforge.pmd.ast.Node;
 import net.sourceforge.pmd.ast.SimpleNode;
 import net.sourceforge.pmd.symboltable.NameOccurrence;
-
-import java.util.List;
 
 /**
  * @author Eric Olander
  */
 public class SingularField extends AbstractRule {
-
+	
     public Object visit(ASTFieldDeclaration node, Object data) {
         if (node.isPrivate() && !node.isStatic()) {
             List<ASTVariableDeclaratorId> list = node.findChildrenOfType(ASTVariableDeclaratorId.class);
@@ -32,6 +35,14 @@ public class SingularField extends AbstractRule {
                 NameOccurrence no = usages.get(ix);
                 SimpleNode location = no.getLocation();
 
+                Node parent3 = location.getNthParent(3);
+                if (parent3 instanceof ASTExpression 
+                		&& parent3.jjtGetParent() instanceof ASTSynchronizedStatement) {
+                	//This usage is directly in an expression of a synchronized block
+                	violation = false;
+                	break;
+                }
+                
                 SimpleNode method = location.getFirstParentOfType(ASTMethodDeclaration.class);
                 if (method == null) {
                     method = location.getFirstParentOfType(ASTConstructorDeclaration.class);
@@ -47,9 +58,11 @@ public class SingularField extends AbstractRule {
                     decl = method;
                     continue;
                 } else if (decl != method) {
-
                     violation = false;
+                    break;	//Optimization
                 }
+                
+                
             }
 
             if (violation && !usages.isEmpty()) {
